--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,11 +8,7 @@ on:
 
 jobs:
   build-and-test:
-    # Use a matrix to run on multiple OSes
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest] # runs on Linux, Windows, Mac
+    runs-on: ubuntu-latest  # runs on Linux, Windows, Mac
 
     steps:
       # Step 1: Checkout repository
@@ -26,7 +22,11 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      # Step 3: Build project and run tests using Maven
+      # Step 3: Check the target folder for report and if doesn't have then create it automatically
+      - name: Ensure Cucumber report folder exists
+        run: mkdir -p target/cucumber-reports/html
+
+      # Step 4: Build project and run tests using Maven
       - name: Build and Run Tests
         run: mvn clean test
 
